@@ -76,6 +76,8 @@ RELEASE 0.XX - XXX
     prerequisites, which will be updated before specified "downstream"
     targets but which don't actually cause the target to be rebuilt.
 
+  - Restore the FS.{Dir,File,Entry}.rel_path() method.
+
   From Maxim Kartashev:
 
   - Fix test scripts when run on Solaris.
